[package]
name = "rython4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[features]
trace = ["peg/trace"]

[dev-dependencies]
ntest = "*"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
regex = "1.6.0"
once_cell = "1.5.2"
thiserror = "1.0.23"
unicode-segmentation = "1"
peg = { git = "https://github.com/kevinmehall/rust-peg", rev = "4b146b4b78a80c07e43d7ace2d97f65bfde279a8" }
log = "0.4"
pretty_env_logger = "0.3.1"